Changes from jTDS 0.9-rc1
=========================

08/13/2004 - Brian Heineman
 o Added test for bug [1008208] 0.9-rc1 updateNull doesn't work

08/13/2004 - David Kilzer
 o Applied patch to check if connection is null before calling
   connection.isClosed() in JtdsStatement.  Patch posted to
   [1007962] 0.9-rc1 NullPointerException; was created while debugging an
   issue with named pipes.

08/12/2004 - Brian Heineman
 o Added result set tests for min and max values.
 o Added result set tests for BIGINT.
 o Corrected conversion errors with Long values that were sent as BigDecimal;
   the value sent to the database was not the value specified.

08/11/2004 - Brian Heineman
 o Applied patch in bug [1006845] Stored procedure with 18 parameters; (thanks
   to Mike Hutchinson for the patch).
 o Added test for bug [1006845] Stored procedure with 18 parameters

08/10/2004 - Brian Heineman
 o Applied patch in bug [1006218] getObject returns incorrect Java class;
   (thanks to Mike Hutchinson for the patch).

===============================================================================
08/09/2004 - jTDS 0.9-rc1 released
===============================================================================

Changes from jTDS 0.8.1
=========================

08/09/2004 - Brian Heineman
 o Corrected bug [1005881] Typo in Exception message "Uknown server host name
   abc"
 o Corrected bug [1005644] Small bug in ant build file; (thanks to Mike
   Hutchinson for the fix).
 o Applied patch [1005550] Documentation on sp_cursorprepare etc.; (thanks to
   Mike Hutchinson for the patch).

08/07/2004 - David Kilzer
 o Changed AbstractDataSource.getTdsVersion() and setTdsVersion() back to
   getTds() and setTds() to preserve external interface.  Left private data
   member named tdsVersion to provide consistency with private field in
   ConnectionJDBC2 and to make testing easier.

08/07/2004 - Brian Heineman
 o Applied patch [1005207] Modified microsoftPrepare method; (thanks to Mike