@@ -228,7 +228,7 @@
               <tr><td><code>1</code></td><td>Temporary stored procedures are created for each unique SQL statement and parameter combination</td></tr>
               <tr><td><code>2</code></td><td>sp_executesql is used</td></tr>
               <tr><td><code>3 (experimental)</code></td><td>sp_prepare is used in conjunction with sp_execute</td></tr>
-              <tr><td><code>4 (not implemented)</code></td><td>sp_prepexec is used in conjunction with sp_execute</td></tr>
+              <tr><td><code>4 (experimental)</code></td><td>sp_prepexec is used in conjunction with sp_execute</td></tr>
             </tbody>
           </table>
           </dd></dt>
