@@ -44,7 +44,7 @@ import net.sourceforge.jtds.util.*;
  *
  * @author Mike Hutchinson
  * @author jTDS project
- * @version $Id: Support.java,v 1.12 2004-08-10 14:57:44 bheineman Exp $
+ * @version $Id: Support.java,v 1.13 2004-08-14 01:29:42 bheineman Exp $
  */
 public class Support {
     // Constants used in datatype conversions to avoid object allocations.
@@ -760,6 +760,31 @@ public class Support {
         }
     }
 
+    /**
+     * Constructs a parameter definition string for use with
+     * sp_executesql, sp_prepare and sp_prepexec.
+     * 
+     * @param parameters Parameters to construct the definition for
+     * @return a parameter definition string
+     */
+    static String getParameterDefinitions(ParamInfo[] parameters) {
+        StringBuffer sql = new StringBuffer(parameters.length * 10);
+        
+        // Build parameter descriptor            
+        for (int i = 0; i < parameters.length; i++) {
+            sql.append("@P");
+            sql.append(i);
+            sql.append(' ');
+            sql.append(parameters[i].sqlType);
+
+            if (i + 1 < parameters.length) {
+                sql.append(',');
+            }
+        }
+        
+        return sql.toString();
+    }
+    
     /**
      * Update the SQL string and replace the &#63; markers with parameter names
      * eg @P0, @P1 etc.
